Add styling to personal website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <img src="https://v.cdn.vine.co/r/avatars/6A2814E6D01323967261878509568_5103d3da218.9.0.jpg?versionId=J1JNqddjmrPHaq2M6ULtoqgrLqkVNkiI"
